crates/lexeme/tests/ui/extra_item_attr.stderr
error: duplicate attribute
 --> tests/ui/extra_item_attr.rs:5:10
  |
5 | #[lexeme(crate = lexeme)]
  |          ^^^^^^^^^^^^^^
