crates/lexeme/tests/ui/extra_item_attr.rs
use lexeme::Lexeme;

#[derive(Lexeme)]
#[lexeme(crate = lexeme)]
#[lexeme(crate = lexeme)]
pub enum Token {}

fn main() {}
